src/snapshots/treelox__interpreter__tests__error.snap
---
source: src/interpreter.rs
expression: results
---
[
    Err(
        (
            true,
            false,
        ),
    ),
]
