src/snapshots/treelox__interpreter__tests__grouping_math.snap
---
source: src/interpreter.rs
expression: results
---
[
    Ok(
        Number(
            200.0,
        ),
    ),
    Ok(
        Number(
            -740.0,
        ),
    ),
]
