src/snapshots/treelox__interpreter__tests__repl_err-2.snap
---
source: src/interpreter.rs
expression: expressions
---
Err(
    Runtime {
        token: Token {
            type: Var,
            lexeme: "var",
            literal: None,
            line: 1,
        },
        message: "Expected expression",
    },
)
