src/snapshots/treelox__interpreter__tests__repl_err.snap
---
source: src/interpreter.rs
expression: expressions
---
Err(
    Parse {
        token: Token {
            type: Eof,
            lexeme: "40",
            literal: None,
            line: 1,
        },
        message: "Expected ')' after expression.",
    },
)
