src/snapshots/treelox__interpreter__tests__var_assign-2.snap
---
source: src/interpreter.rs
expression: expressions
---
Err(
    Runtime {
        token: Token {
            type: Print,
            lexeme: "print",
            literal: None,
            line: 1,
        },
        message: "Expected expression",
    },
)
